Updated cusrtomer class (test)

--- a/MyClassLib/MyClassLib.csproj
+++ b/MyClassLib/MyClassLib.csproj
@@ -43,6 +43,8 @@
     <Compile Include="ClsCustomer.cs" />
     <Compile Include="ClsCustomerCollection.cs" />
     <Compile Include="clsDataConnection.cs" />
+    <Compile Include="clsProduct.cs" />
+    <Compile Include="clsProductCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
